# big-ring

./: .gitignore  .hgignore  .travis.yml  ANT.cpp  ANT.h  ANTChannel.cpp  ANTChannel.h  ANTMessage.cpp  ANTMessage.h  CHANGELOG.md  CMakeLists.txt  CommPort.h  NO_Lysebotn2.pgmf  README.md  Serial.h  _config.yml  antcontroller.cpp  antcontroller.h  antdevice.cpp  antdevice.h  antdevicefinder.cpp  antdevicefinder.h  antmessagegatherer.cpp  bytearraytoantmessageconverter.cpp  bytearraytoantmessageconverter.h  config.pri  cyclist.cpp  cyclist.h  development.html  download.html  doxyfile  feedback.html  game.cpp  index.html  indoorcycling.pro  instructions.html  main.cpp  mainwindow.cpp  mainwindow.h  moviefiledroparea.cpp  (+40 more)
QmlTest/: QmlTest.desktop  QmlTest.pro  main.cpp
RLVParserTest/: .main.cpp.swp  CMakeLists.txt  Makefile  NO_Lysebotn2.rlv  RLVParserTest.pro  main.cpp  mainwindow.cpp  mainwindow.h  reallivevideo.cpp  reallivevideo.h  reallivevideoimporter.cpp  reallivevideoimporter.h  reallivevideoparser.cpp  reallivevideoparser.h  reallivevideowidget.cpp  reallivevideowidget.h  rlvlistwidget.cpp  rlvlistwidget.h  rlvlistwidget.ui  videowidget.cpp  videowidget.h
_includes/: footer.html  head.html  header.html
_layouts/: default.html
_posts/: 2015-05-07-welcome-to-jekyll.markdown  2015-12-17-version-1.4.0-released.md  2016-01-01-version-1.5.0-released.md  2016-01-17-version-1.6.0-released.md  2016-01-18-version-1.6.1-released.md  2016-01-31-version-1.7.0-released.md  2016-02-29-version-1.8.0-released.md
_sass/: _header.scss
_site/: feed.xml  index.html
_site/about/: index.html
antlib/: ANT.cpp  ANT.h  ANTChannel.cpp  ANTChannel.h  ANTMessage.cpp  ANTMessage.h  antcentraldispatch.cpp  antcentraldispatch.h  antchannelhandler.cpp  antchannelhandler.h  antchanneltype.h  antcontroller.cpp  antcontroller.h  antdevice.cpp  antdevice.h  antdevicefinder.cpp  antdevicefinder.h  antheartratechannelhandler.cpp  antheartratechannelhandler.h  antlib.pri  antlib.pro  antmessage2.cpp  antmessage2.h  antmessagegatherer.cpp  antmessagegatherer.h  antpowerchannelhandler.cpp  antpowerchannelhandler.h  antsensortype.h  antsmarttrainerchannelhandler.cpp  antsmarttrainerchannelhandler.h  antspeedandcadencechannelhandler.cpp  antspeedandcadencechannelhandler.h  core.c  unixserialusbant.cpp  unixserialusbant.h  usb2antdevice.cpp  usb2antdevice.h  usbexpressantdevice.cpp  usbexpressantdevice.h  util.h
anttestapp/: anttestapp.cpp  anttestapp.pro  anttestappmainwindow.cpp  anttestappmainwindow.h  anttestappmainwindow.ui
big-ring/: big-ring.pro  main.cpp
cmake/: FindFFMPEG.cmake  FindGLEW.cmake  FindLIBUSB-1.cmake
css/: main.scss
ext/gtest/: CMakeLists.txt
google_test/: google_test.pro
indoorcycling/: indoorcycling.pro  screensaverblocker.cpp  screensaverblocker.h
indoorcycling1/: indoorcycling1.pro  main.cpp  mainwindow.cpp  mainwindow.h
indoorcycling2/: addsensorconfigurationdialog.cpp  addsensorconfigurationdialog.h  addsensorconfigurationdialog.ui  altitudeprofilewidget.cpp  altitudeprofilewidget.h  clockitem.cpp  clockitem.h  createnewcoursedialog.cpp  createnewcoursedialog.h  createnewcoursedialog.ui  indoorcycling2.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preferencesdialog.cpp  preferencesdialog.h  previewvideowidget.cpp  previewvideowidget.h  profilewidget.cpp  profilewidget.h  rlvtablemodel.cpp  rlvtablemodel.h  sensorconfiguration.cpp  sensorconfiguration.h  sensorvalueitem.cpp  sensorvalueitem.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  stoprundialog.cpp  stoprundialog.h  stoprundialog.ui  uiresources.qrc  videodetails.cpp  videodetails.h  videodetails.ui  videodetailswidget.cpp  videodetailswidget.h  videoitemdelegate.cpp  (+17 more)
libvlc/: CMakeLists.txt  main.cpp  player.cpp  player.h  simple_playback.c  vlc-thumb.c
mainlib/: ANT.h  Defines.pri  README.md  actuators.cpp  actuators.h  analyticssender.cpp  analyticssender.h  antdevicefinder.cpp  antmessagegatherer.h  bigringsettings.cpp  bigringsettings.h  clockgraphicsitem.cpp  clockgraphicsitem.h  cyclist.cpp  cyclist.h  distancemappingentry.cpp  distancemappingentry.h  flags.qrc  framebuffer.h  framecopyingvideoreader.cpp  framecopyingvideoreader.h  game.h  genericvideoreader.cpp  genericvideoreader.h  gpxfileparser.cpp  gpxfileparser.h  icons.qrc  informationboxgraphicsitem.cpp  informationboxgraphicsitem.h  mainlib.pri  mainlib.pro  messagepanelitem.h  moviefiledroparea.h  newvideowidget.cpp  newvideowidget.h  openglpainter.cpp  openglpainter.h  openglpainter2.cpp  openglpainter2.h  powersensoritem.cpp  (+72 more)
mainlib/ant/: README.md  antcentraldispatch.cpp  antcentraldispatch.h  antchannelhandler.cpp  antchannelhandler.h  antdevice.cpp  antdevice.h  antdevicefinder.cpp  antheartratechannelhandler.cpp  antheartratechannelhandler.h  antmessage2.cpp  antmessage2.h  antmessagegatherer.cpp  antpowerchannelhandler.cpp  antsensortype.h  antsmarttrainerchannelhandler.cpp  antsmarttrainerchannelhandler.h  antspeedandcadencechannelhandler.cpp  antspeedandcadencechannelhandler.h  unixserialusbant2.cpp  usb2antdevice.cpp  (+2 more)
shaders/: fragmentshader.glsl  vertexshader.glsl
test/: antmessage2test.cpp  antmessage2test.h  antmessagegatherertest.cpp  antmessagetest.cpp  antmessagetest.h  common.h  distanceentrycollectiontest.cpp  distanceentrycollectiontest.h  main.cpp  profiletest.cpp  profiletest.h  reallifevideocachetest.cpp  reallifevideocachetest.h  reallifevideosaveandloadtest.cpp  reallifevideosaveandloadtest.h  reallifevideotest.cpp  reallivevideotest.cpp  ridefilewritertest.cpp  ridefilewritertest.h  rollingaveragecalculatortest.cpp  rollingaveragecalculatortest.h  test.pro  testfiles.qrc  testmain.cpp  virtualcyclingfileparsertest.cpp  virtualcyclingfileparsertest.h  virtualpowertest.cpp  virtualpowertest.h  virtualtrainingfileparsertest.cpp  virtualtrainingfileparsertest.h
videotest/: main.cpp  openglpainter2.cpp  openglpainter2.h  videoreader2.cpp  videoreader2.h  videotest.pro  videotestmainwindow.cpp  videotestmainwindow.h  videotestmainwindow.ui  videowidget.cpp  videowidget.h
(+117 files in other folders)
